$Id$

NOTE: This is the 1.3.0 development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2011)
 - 2-Jun-11 roj  Bug [ 3307633 ] Non-static method Doc::attachmentsEnabled
 - 1-May-11 roj  Bug [ 3136643 ] php error when trying to log with wrong password. postgresql
 - 26-Apr-11 roj Fixed pass by reference warnings when running PHP 5.3
 - 26-Apr-11 roj Bug [ 3095745 ] Invalid table structure for MS SQL
 - 17-Apr-11 roj Bug [ 3131513 ] View id lost when using next and previous arrows
 - 17-Apr-11 roj Bug [ 3131543 ]Time is not displayed correctly when min = 0
 - 07-Oct-10 cek Updated layers.php with new Modalbox code and UI improvements.
 - 21-Aug-10 cek Added support for PNG category icons; improvements to
   category icon uploading; display error when permissions of icons
   directory is read-only
 - 15-Aug-10 cek Added modalbox code to combo.php
 - 15-Aug-10 cek Update Prototype library from 1.5 to 1.6.1
 - 14-Aug-10 cek Fixes for PHP warnings about default timezone not being set.
 - 07-Apr-10 cek Added better error message for unlink error in db_cachedir.
 - 06-Apr-10 cek Fixed bug [ 2769084 ] xss vulnerability with cat_id in month.php
 - 06-Apr-10 cek Security Fix: Fixes for cross-site scripting and denial
   of service.  For details of issues:
   http://tasecuritygroup.com/download/SCL-2010-001.txt
 - 17-Mar-10 bb Patch [ 2971855 ] German updated translation
 - 06-Mar-10 bb Removed the comments from "font-size" in css/styles.css.
   I'm not seeing any problem with these.
   Both my web host and my PC with WAMP look fine with both IE and Firefox.
   Clean up the CSS a bit.
 - 06-Mar-10 bb Bug [ 2954781 ] "Color options" are not set on the left margin
 - 06-Mar-10 bb Fix bugs when empty( $settings['db_password']
 - 06-Mar-10 bb Patch [ 2954502 ] Problems with hinding duplicate entries in layers
   The code has changed quite a bit since this patch was submitted. I think I got everything.